<resources>
    <string name="app_name">Pescaderia Victoriana</string>
    <string name="header_text">Pescaderia Victoriana\n       TFN: 952402135</string>
    <string name="string_vacio"> </string>
    <string name="no_puedo_email">No hay ningun pedido en este momento. Imposible mandar email</string>
    <string name="direccion_email_mala">La direccion de email destino no es correcta. Imposible realizar pedido</string>
    <string name="selecciona_email_app">Selecciona app para mandar email</string>
    <string name="imposible_mandar_pedido">No se puede realizar pedido (necesita instalar App para enviar emails como GMAIL)</string>
    <string name="sms_no_enviado">Operacion fallida.</string>
    <string name="sms_enviado">Hemos avisado a su proveedor por SMS.</string>
    <string name="no_hay_usuario_registrado">No existe un usuario. Cree un usuario antes de realizar pedido</string>
    <string name="permission_ungranted">Permiso no Concedido</string>
    <string name="permission_not_granted">Debe conceder permisos para mandar SMS manualmente</string>
    <string name="database_not_updated">Sin conexion a internet. Base de datos no actualizada</string>
    <string name="database_updated">Base de datos actualizada</string>
    <string name="no_existe_producto">El producto que usted desea no esta disponible</string>
    <string name="no_actualiza_producto">No se puede actualizar el producto</string>
    <string name="producto_actualizado">Producto Actualizado</string>
    <string name="invalid_update">No se puede actualizar base de datos de pedidos.</string>
    <string name="no_puedo_registrar_pedido_en_bd">Fallo al registrar pedido en base de datos (El proveedor podra hacer su pedido si envio el email anteriormente)</string>
    <string name="pedido_cargado_en_bd">Su pedido fue registrado en la base de datos</string>
    <string name="no_usuario_con_ese_cif">No existe ningun pedido que corresponda a su CIF</string>
    <string name="no_usuario_con_ese_cif_con_pedido_en_esa_fecha">Ningun pedido fue realizado por el usuario en la fecha solicitada</string>
    <string name="no_eliminado">Error al eliminar el producto</string>
    <string name="db_no_eliminada">Error al borrar base de datos</string>
    <string name="eliminado_exito">Se elimino el producto</string>
    <string name="no_hay_productos">No hay ningun producto disponible</string>
    <string name="databases_deleted">Base de datos local borrada.</string>
    <string name="query_engine_failure">Fallo en la base de datos. Contacte al administrador del App</string>
    <string name="no_usuarios_definidos">No Existe ningun usuario en la base de datos</string>
    <string name="no_puedo_crear_usuario">Fallo al crear usuario (Ya existe)</string>
    <string name="usuario_creado">Usuario creado con exito</string>
    <string name="no_puedo_eliminar_usuario">Error al eliminar usuario</string>
    <string name="usuario_eliminado_exito">Usuario eliminado con exito</string>
    <string name="no_puedo_eliminar_usuarios">Se encontro un error al eliminar algun usuario</string>
    <string name="usuarios_eliminados_exito">Exito al borrar la lista de usuarios</string>
    <string name="error_modificar_usuario"><u>Error al modificar usuario</u></string>
    <string name="exito_modificar_usuario">Exito al modificar usuario</string>
    <string name="no_usuarios_definidos_con_este_id">Fallo al encontrar usuarios con este ID</string>
    <string name="get_all_users_text">Buscar todos los usuarios</string>
    <string name="crea_usuario_string">REGISTRA TU USUARIO</string>
    <string name="todos_los_campos_son_obligatorios">*Todos los campos son obligatorios*</string>
    <string name="usuario_ya_existe">Imposible crear usuario. Ya existe en nuestra base de datos.</string>
    <string name="usuario_desconocido">Este usuario no existe.</string>
    <string name="hint_cif">CIF (C-12345678)</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellidos">Apellidos</string>
    <string name="hint_direccion">Direccion</string>
    <string name="hint_telefono">Telefono</string>
    <string name="hint_email">Email (minombre@midominio.xxx)</string>
    <string name="hint_intro_email">Direccion Email</string>
    <string name="hint_enter_email">Email</string>
    <string name="cambio_contrasena">Contrasena</string>
    <string name="cambio_repite_contrasena">Repita Contrasena</string>
    <string name="hint_contrasena">Introduce Contrasena</string>
    <string name="hint_repite_contrasena">Repita la contrasena</string>
    <string name="hint_pregunta_recupera_contrasena">Pregunta para recuperar contrasena</string>
    <string name="hint_respuesta_recupera_contrasena">Respuesta recuperar contrasena</string>
    <string name="registra_usuario">Registrate</string>
    <string name="login">Login/Entra</string>
    <string name="haz_login"><u>INTRODUCE NOMBRE Y CONTRASENA</u></string>
    <string name="navigation_drawer_open">Menu</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="change_user_data">Mis Datos</string>
    <string name="new_user">Registrar Usuario</string>
    <string name="admin_users">Administrar Usuarios</string>
    <string name="see_last_order">Mi Ultimo Pedido</string>
    <string name="admin_orders">Administrar Pedidos</string>
    <string name="admin_products"><u>Administrar Productos</u></string>
    <string name="admin_products_caps"><u>ADMINISTRAR PRODUCTOS</u></string>
    <string name="basket">Cesta</string>
    <string name="logout">Logout</string>
    <string name="dialog_message">Quieres salir de verdad?</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="new_order">Crear Pedido Nuevo</string>
    <string name="aceptar">ACEPTAR CAMBIOS</string>
    <string name="aceptar_codigo">ACEPTAR CODIGO</string>
    <string name="aceptar_registro">ACEPTAR</string>
    <string name="responder">Aceptar Respuesta</string>
    <string name="cif_ya_existe">Este CIF ya existe en nuestra base de datos.</string>
    <string name="olvide_contrasena_string"><u>Olvido su contrasena?</u></string>
    <string name="volver_atras">Volver Atras</string>
    <string name="escriba_email">Introduzca su direccion Email</string>
    <string name="recuperar_password">RECUPERA CONTRASENA</string>
    <string name="enter_cif">Introduzca su CIF</string>
    <string name="responda_la_pregunta">Responda la pregunta</string>
    <string name="email_and_password_required">Nombre y Contrasena son requeridos</string>
    <string name="user_doesnt_exist">Este usuario no existe.\nCree uno nuevo.</string>
    <string name="welcome">Bienvenido</string>
    <string name="respuesta_no_coincide">Su respuesta no coincide</string>
    <string name="error_de_red">Error al enviar email de recuperacion</string>
    <string name="email_de_recuperacion_enviado">Email de recuperacion de contrasena ha sido enviado</string>
    <string name="enter_phone_number">Escriba su numero de telefono</string>
    <string name="responda_aqui">Escriba su respuesta aqui</string>
    <string name="introduzca_codigo">Introduzca su codigo de validacion</string>
    <string name="codigo_enviado">Le hemos mandado un email con un codigo para cambiar su password.\nCopielo y peguelo en la aplicacion</string>
    <string name="codigo_no_coincide">El Codigo no coincide.</string>
    <string name="introduzca_nuevas_contrasenas">RECUPERACION DE CONTRASENA</string>
    <string name="introduzca_nueva_contrasena">Nueva contrasena</string>
    <string name="contrasena_no_coincide">Las contrasenas no coinciden</string>
    <string name="contrasena_cambiada_con_exito">Contrasena cambiada con exito!!!</string>
    <string name="escriba_aqui">Escriba aqui su contrasena</string>
    <string name="modifica_datos_usuario"><u>MODIFICA TUS DATOS</u></string>
    <string name="modificar_datos_este_usuario">MODIFICAR DATOS</string>
    <string name="algunos_datos_no_cambia">*Algunos datos como el CIF no se pueden cambiar.\nContacte con el administrador de la pescaderia.</string>
    <string name="pregunta_invalida">Seleccione una pregunta</string>
    <string name="OK">OK</string>
    <string name="seguro_cambio">Seguro que quieres cambiar tus datos?</string>
    <string name="didnt_modify_user">No has modificado tus datos.</string>
    <string name="busca_producto">Busqueda de producto</string>
    <string name="lista_productos">LISTA DE PRODUCTOS</string>
    <string name="ultimo_pedido_string"><u>SU ULTIMO PEDIDO</u></string>
    <string name="pedir_de_nuevo">REALIZAR MISMO PEDIDO</string>
    <string name="volver_no_pedir_de_nuevo">\t\t\t\t\t\t\tVOLVER\t\t\t\t\t\t\t\t</string>
    <string name="repetir_pedido"><u>DESEA REPETIR EL PEDIDO?</u></string>
    <string name="reorden_no_posible">Error. No existe ningun pedido previo.</string>
    <string name="al_peso">€/Kilo</string>
    <string name="por_unidad">€/Unidad</string>
    <string name="esta_seguro_enviar_repedido">Esta seguro que quiere realizar el mismo pedido?</string>
    <string name="cantidad_deseada">Cantidad deseada.</string>
    <string name="enviar_pedido">Enviar Pedido</string>
    <string name="cancelar_pedido">Cancelar Pedido</string>
    <string name="nuevo_pedido"><u>NUEVO PEDIDO</u></string>
    <string name="precio_total">"Precio Total: "</string>
    <string name="agregar_a_cesta">IR A LA CESTA</string>
    <string name="no_se_puede_agregar_a_la_lista" type="id">Este objeto ya se encuentra en la cesta.</string>
    <string name="no_puede_a_cero">La Cantidad debe ser superior a 0.</string>
    <string name="cesta_de_la_compra"><u>CESTA</u></string>
    <string name="realizar_compra">FINALIZAR PEDIDO</string>
    <string name="tienes_un_pedido">"Recibiste un pedido de "</string>
    <string name="cesta_vacia">No existe ningun pedido</string>
    <string name="vaciar_cesta">Vaciar Cesta</string>
    <string name="vaciar_cesta_seguro">Haz click en SI para vaciar la cesta</string>
    <string name="cesta_vaciada">Su cesta ha sido vaciada</string>
    <string name="guardar_cambios">GUARDAR\nCAMBIOS</string>
    <string name="cancelar_cambios">CANCELAR</string>
    <string name="hint_nombre_producto">Nombre del producto</string>
    <string name="precio_string">"PRECIO:   "</string>
    <string name="string_nombre">"NOMBRE    "</string>
    <string name="string_id">"ID PRODUCTO:   "</string>
    <string name="unidad_o_peso">UNIDAD/KILO   </string>
    <string name="no_productos_disponibles">No hay productos o la base de datos esta vacia.</string>
    <string name="borrar_producto">BORRAR PRODUCTO</string>
    <string name="seguro_eliminar_producto">Seguro que desea eliminar producto?</string>
    <string name="hint_precio">Precio del producto</string>
    <string name="nombre_vacio">Debe dar un nombre al producto</string>
    <string name="precio_vacio">Debe asignar un precio al producto</string>
    <string name="fallo_al_crear_producto">Fallo al crear producto. Olvido algun campo?</string>
    <string name="nuevo_producto">CREAR NUEVO PRODUCTO</string>
    <string name="no_unidad_o_peso">Unidad de medida no seleccionada</string>
    <string name="producto_introducido">Producto introducido con exito</string>
    <string name="no_introduce_producto">No se puede crear el producto</string>
    <string name="movable_to_left">Products are scrollable to the left</string>
    <string name="movable_to_right">Products are scrollable to the right</string>
    <string name="actualizar_producto">ACTUALIZAR</string>
    <string name="admin_order_caps">ADMINISTRAR PEDIDOS</string>
    <string name="cancelar">CANCELAR</string>
    <string name="selecciona_usuario">USUARIO (Requerido)</string>
    <string name="anadir_nuevo_producto">"Nuevo Producto:  "</string>
    <string name="cargando_usuarios">"Cargando usuarios, espere... "</string>
    <string name="wait_a_moment">Espere un momento...</string>
</resources>