<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="3dp"
            android:paddingHorizontal="8dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/nuevo_producto"
            android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="3dp"
        android:paddingHorizontal="3dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_nombre"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal|bold"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/new_dialog_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre_producto"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal|bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="3dp"
        android:paddingHorizontal="3dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio_string"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal|bold"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/new_dialog_precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:hint="@string/hint_precio"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal|bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="3dp"
        android:paddingHorizontal="3dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unidad_o_peso"
            android:elevation="10sp"
            android:paddingVertical="4dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal|bold"/>
        <RadioGroup
            android:id="@+id/new_kg_unit_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="4dp">
            <RadioButton
                android:id="@+id/new_radio_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elegantTextHeight="true"
                android:elevation="10sp"
                android:paddingVertical="4dp"
                android:text="@string/por_unidad"
                android:textColor="@color/black"
                android:textSize="15sp" />
            <RadioButton
                android:id="@+id/new_radio_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elegantTextHeight="true"
                android:elevation="10sp"
                android:paddingVertical="4dp"
                android:text="@string/al_peso"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="3dp">
            <ImageButton
                android:id="@+id/accept_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_accept_24"/>
            <ImageButton
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_close_24"/>
    </LinearLayout>
    
</LinearLayout>