<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_product_base_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:background="@color/splashBackground">
    <LinearLayout
        android:id="@+id/progress_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <androidx.core.widget.ContentLoadingProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:translationZ="5dp"
            style="?android:attr/progressBarStyleSmall"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/admin_product_base_layout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="-5dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/admin_products_caps"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="50dp"
            android:layoutDirection="ltr"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/product_viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_layout" />
        </LinearLayout>

        <ImageView
            android:id="@+id/arrow_left"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:contentDescription="@string/movable_to_left"
            android:src="@drawable/chevron_left"
            app:layout_constraintBottom_toTopOf="@+id/nuevo_producto"
            app:layout_constraintEnd_toStartOf="@+id/arrow_right"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_view_pager" />

        <ImageView
            android:id="@+id/arrow_right"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:contentDescription="@string/movable_to_right"
            android:src="@drawable/chevron_right"
            app:layout_constraintBottom_toTopOf="@+id/nuevo_producto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_view_pager" />

        <TextView
            android:id="@+id/nuevo_producto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="15dp"
            android:paddingHorizontal="4dp"
            android:paddingVertical="2dp"
            android:text="@string/anadir_nuevo_producto"
            android:textSize="25sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/add_new_product"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_view_pager"
            app:layout_constraintVertical_bias="0.15" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_new_product"
            android:layout_width="60dp"
            android:layout_height="49dp"
            android:foreground="@drawable/add_product_button_drawable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.798"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_view_pager"
            app:layout_constraintVertical_bias="0.172" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>